	gdImageFilledArc rather than a 2-stage bound-and-fill.

	* src/graph3d.c (draw_3d_graphbox):  Bugfix: Only draw vertical lines
	from base corners to surface if there really _is_ a surface.
	Having pm3d in surface mode is not sufficient.
	
	* demo/contours.dem: Where the above fix removes a vertical line along
	z, remove the z axis tics also.  Add a single-color contour demo.

2006-05-04  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in (AC_PROG_CXX): Redefine AC_MSG_ERROR for
	AC_PROG_CXX, to prevent possible fatal errors in future autoconf
	versions.
	(WX_OBJ): Remove definition, let automake handle it.

	* src/Makefile.am (BUILD_WXWIDGETS): Simplify conditional
	compilation of the wxWidgets terminal, using automake
	conditionals instead of gnuplot_DEPENDENCIES and gnuplot_LDADD.

2006-05-01  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in (AC_PROG_CXX): Check for C++ unconditionally,
	and workaround harmful autoconf settings if no compiler is found.
	(PANGO): Raise minimum version to 1.10.

	* term.c (init_terminal): Make wxt the default terminal if it
	is available even if X11 is not defined.

2006-04-30  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/makefile.mgw (DESTDIR): MSYS-ify the drive letter.
	(GNUSORT): Use Unix-ish path to MSYS port of GNU sort.
	(all): Refer to default target instead of copying all its entries.
	(default): Remove config.h dependency.
	($(OBJS) $(WINOBJS) dbinary.$(O)): Add rule that they depend on
	config.h.
	($(M)bf_test.exe): Chdir to $(M), not $(D).
	(dbinary.$(O)): Input file is $<, not $^.
	(install) [WXT]: Move WX-specific installation rules here.

	* term/win.trm (WIN_enhanced_flush): Removed unused variables rc,
	cbR.

	* term/pslatex.trm (PSTEX_common_init): Avoid warning by making
	compile-time test an #if rather than an if.

	* config/makefile.mgw: Change this to expect MSYS tools to be used
	instead of the older native MINGW32 ports.  Necessitates some